manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: razorpage
  labels: 
    app: razorpage
spec:
  type: ClusterIP
  selector:
    app: razorpage
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
