manifests/ingress1.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress
annotations:
  kubernetes.io/ingress.class: 'nginx'
  nginx.ingress.kubernetes.io/rewrite-target: '/$2'
labels:
    app.kubernetes.io/part-of: 'microservice'
spec:
  rules:
  - http:
     paths:
     - backend:
         serviceName: frontend
         servicePort: 80
       path: /()(.*)
     - backend:
         serviceName: backend
         servicePort: 80
       path: /backend(/|$)(.*)
     - backend:
          serviceName: razorpage
          servicePort: 80
       path: /razorpage(/|$)(.*)
